# helix-bench

./: BENCHES.md  Cargo.toml  README.md  queries.rs  start_neo4j.sh
helixdb-cfg/: config.hx.json  queries.hx  schema.hx
helixdb-queries/: config.hx.json  main.hx  queries.hx  queries.rs  schema.hx
src/: helixdb.rs  main.rs  neo4j.rs  types.rs  utils.rs
