[package]
name = "helix-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
uuid = { version = "1.12.1", features = ["std", "v4", "v6", "fast-rng"] }
rand = { version = "0.8.5", features = ["small_rng"] }
